--- a/src/polysets-web/src/App.css
+++ b/src/polysets-web/src/App.css
@@ -171,6 +171,17 @@ label.p-button
   top: -26px;
 }
 
+#pwdreset{
+  width: 30%;
+  margin: 100px auto 130px auto;
+}
+#pwdreset h4{
+  width: 100%;
+  text-align: center;
+  font-size: 20px;
+  padding: 20px 0px 10px 0px;
+}
+
 .btnback {
   color: #000000;
   background: #ffffff;
