Updated Customized Fund Section

--- a/src/polysets-web/src/App.css
+++ b/src/polysets-web/src/App.css
@@ -170,7 +170,6 @@ label.p-button {
   margin: 100px auto 130px auto;
 }
 #pwdreset h4{
-#pwdreset {
   width: 30%;
   margin: 100px auto 130px auto;
 }
@@ -200,6 +199,34 @@ label.p-button {
   border: 1px solid #9b7fbc !important;
   width: 48%;
   margin: 5px 0px !important;
+}
+
+
+.customize-btn-section
+{
+  padding-top: 5%;
+  padding-bottom: 5%;
+}
+
+
+
+#btncont-cust {
+  color: #ffffff;
+  background: #0d89ec !important;
+  border: 1px solid #0d89ec !important;
+  width: 30%;
+  margin: 5px 0px !important;
+}
+
+
+.btncont-cust:hover {
+  color: #000000;
+  background: #0d89ec;
+  border: 1px solid #0d89ec;
+}
+
+#btnback-cust {
+  width: 30%;
 }
 
 #btnback {
@@ -298,8 +325,7 @@ footer {
   float: right !important;
 }
 
-#btnlogout
-{
+
 #btnlogout {
   width: 35%;
 }
